--- a/src/DAO/config/config.json
+++ b/src/DAO/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "pomodoro",
-    "password": "pomodoro",
+    "username": "postgres",
+    "password": "postgres",
     "database": "pomodoro_db",
     "host": "127.0.0.1",
     "dialect": "postgres"
