Agregar y Editar funcionales

--- a/src/DAO/config/config.json
+++ b/src/DAO/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "pomodoro_db",
+    "database": "proyectoDB",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
@@ -16,7 +16,7 @@
   "production": {
     "username": "postgres",
     "password": "postgres",
-    "database": "pomodoro_db",
+    "database": "proyectoDB",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
