--- a/src/DAO/config/config.json
+++ b/src/DAO/config/config.json
@@ -1,10 +1,16 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "pomodoro",
+    "password": "ProgWeb12",
     "database": "proyectoDB",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "host": "pomodorodbortiz.postgres.database.azure.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "test": {
     "username": "root",
@@ -14,10 +20,16 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "pomodoro",
+    "password": "ProgWeb12",
     "database": "proyectoDB",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "host": "pomodorodbortiz.postgres.database.azure.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
