--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000
-CADENA_CONEXION=postgres://pomodoro:ProgWeb12@pomodorodbortiz.postgres.database.azure.com:8080/proyectoDB
+PORT=5000
+CADENA_CONEXION=postgres://pomodoro:ProgWeb12@pomodorodbortiz.postgres.database.azure.com/proyectoDB
 NODE_ENV=DEVELOPMENT
