--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 CADENA_CONEXION=postgres://pomodoro:ProgWeb12@pomodorodbortiz.postgres.database.azure.com/proyectoDB
 NODE_ENV=DEVELOPMENT
+PASS_DB=ProgWeb12
