--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-CADENA_CONEXION=postgres://postgres:postgres@localhost:5432/pomodoro_db
+CADENA_CONEXION=postgres://pomodoro:ProgWeb12@pomodorodbortiz.postgres.database.azure.com/proyectoDB
 JWT_SECRET=mi_super_secreto
