--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-CADENA_CONEXION=postgres://pomodoro:ProgWeb12@pomodorodbortiz.postgres.database.azure.com/proyectoDB
+CADENA_CONEXION=secreto
 JWT_SECRET=mi_super_secreto
