--- a/src/DAO/config/config.json
+++ b/src/DAO/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "pomodoro",
-      "password": "ProgWeb12",
+      "password": "secreto",
       "database": "proyectoDB",
       "host": "pomodorodbortiz.postgres.database.azure.com",
       "dialect": "postgres",
@@ -21,7 +21,7 @@
     },
     "production": {
       "username": "pomodoro",
-      "password": "ProgWeb12",
+      "password": "secreto",
       "database": "proyectoDB",
       "host": "pomodorodbortiz.postgres.database.azure.com",
       "dialect": "postgres",
